--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.20.17",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "base64-js": "^1.5.1",
-    "expo": "53.0.18",
+    "expo": "^53.0.20",
     "metro": "^0.82.5",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-svg": "15.11.2",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.11.2",
     "svg-path-properties": "^1.3.0"
   },
   "devDependencies": {
