--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.11.2",
-    "svg-path-properties": "^1.3.0"
+    "svg-path-properties": "^1.3.0",
+    "expo-image": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
