--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.11.2",
     "svg-path-properties": "^1.3.0",
-    "expo-image": "~2.4.0"
+    "expo-image": "~2.4.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
