--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.20.17",
+    "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "axios": "^1.12.2",
     "base64-js": "^1.5.1",
     "expo": "^53.0.22",
+    "expo-image": "~2.4.0",
     "metro": "^0.82.5",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.11.2",
-    "svg-path-properties": "^1.3.0",
-    "expo-image": "~2.4.0",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "svg-path-properties": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
