--- a/package.json
+++ b/package.json
@@ -9,31 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.20.17",
+    "@expo/metro-config": "~54.0.2",
+    "@expo/metro-runtime": "~6.1.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "base64-js": "^1.5.1",
-    "expo": "^53.0.22",
-    "metro": "^0.82.5",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.11.2",
-    "svg-path-properties": "^1.3.0",
-    "expo-image": "~2.4.0",
-    "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "expo": "^54.0.9",
+    "expo-image": "~3.0.8",
+    "hammerjs": "^2.0.8",
+    "metro": "^0.83.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "svg-path-properties": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
+    "@babel/core": "^7.26.0",
+    "@types/hammerjs": "^2.0.46",
+    "@types/react": "~19.1.10",
     "@types/react-native": "~0.73.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
