--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@types/babel__traverse": "^7.28.0",
     "@types/hammerjs": "^2.0.46",
     "@types/react": "~19.1.10",
     "@types/react-native": "~0.73.0",
